<resources>
    <string name="app_name" translatable="false">HMA-OSS</string>
    <string name="title_home">Home</string>
    <string name="title_logs">Logs</string>
    <string name="title_settings">Settings</string>
    <string name="title_template_manage">Manage templates</string>
    <string name="title_template_settings">Template settings</string>
    <string name="title_app_manage">Manage apps</string>
    <string name="title_app_select">Select apps</string>
    <string name="title_app_settings">App settings</string>
    <string name="title_about">About</string>
    <string name="title_about_fork">About this fork</string>
    <string name="do_not_dual">Do not install HMA to secondary user</string>
    <string name="show_crash_log">Show crash log</string>
    <string name="config_damaged">Config file damaged. Please clean the app data</string>
    <string name="edit_list">Edit list</string>
    <string name="delete">Delete</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="work_mode">Work mode</string>
    <string name="blacklist">Blacklist</string>
    <string name="whitelist">Whitelist</string>
    <string name="application">Application</string>
    <string name="preferences">Preferences</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="system">System</string>
    <string name="follow_system">Follow system</string>
    <string name="home_xposed_activated">Module Activated [%s]</string>
    <string name="home_xposed_not_activated">Module Not Activated</string>
    <string name="home_xposed_service_on">System service running [%d]</string>
    <string name="home_xposed_service_off">System service not running</string>
    <string name="home_xposed_service_old">Module updated, need reboot</string>
    <string name="home_xposed_filter_count">HMA-OSS has filtered total %d requests</string>
    <string name="home_manage">Manage</string>
    <string name="home_detection_test">Detection test</string>
    <string name="home_download_test_app_title">Download test app</string>
    <string name="home_download_test_app_message">We have developed an individual detection test app and migrated detection test to it. Do you want to download it now?</string>
    <string name="home_backup_and_restore">Backup &amp; Restore</string>
    <string name="home_backup_config">Backup config</string>
    <string name="home_restore_config">Restore config</string>
    <string name="home_import_successful">Import successful</string>
    <string name="home_import_failed">Import failed</string>
    <string name="home_import_app_version_too_old">Module version lower than the backup</string>
    <string name="home_import_backup_version_too_old">Backup version too old</string>
    <string name="home_import_file_damaged">Backup file was damaged</string>
    <string name="home_export_failed">Export failed</string>
    <string name="home_exported">Backed up config</string>
    <string name="home_new_update">New update available: %s</string>
    <string name="home_update">Update: %s</string>
    <string name="list_show_system">Show system apps</string>
    <string name="list_sorting">Sorting</string>
    <string name="list_reverse_order">Reverse order</string>
    <string name="list_sort_by_label">By app name</string>
    <string name="list_sort_by_package_name">By package name</string>
    <string name="list_sort_by_install_time">By install time</string>
    <string name="list_sort_by_update_time">By update time</string>
    <string name="list_empty_no_enabled">Try enabling hiding for apps with this template\'s work mode and apps will appear here</string>
    <string name="list_empty_no_apps">No applications found, maybe you didn\'t allow this app to query all packages</string>
    <string name="list_empty_preset">No applications added in this preset</string>
    <string name="template_usage_hint">Establish templates for \"restless\" apps, controlling applist they can obtain.\n\nBlacklist (recommended): the apps selected in the template will be invisible to the apps applying the template.\nWhitelist: the apps not selected in the template will be invisible to the apps applying the template.</string>
    <string name="template_new_blacklist">Create a blacklist template</string>
    <string name="template_new_whitelist">Create a whitelist template</string>
    <string name="template_delete">Are you sure to delete the template?</string>
    <string name="template_name">Template name</string>
    <string name="template_name_invalid">Name invalid</string>
    <string name="template_delete_title">Delete Template</string>
    <string name="template_name_already_exist">Template name already exist</string>
    <string name="template_applied_count">Applied to %d apps</string>
    <string name="template_apps_visible_count">%d apps visible</string>
    <string name="template_apps_invisible_count">%d apps invisible</string>
    <string name="app_enable_hide">Enable hide</string>
    <string name="app_template_config">Template config</string>
    <string name="app_choose_template">Choose template</string>
    <string name="app_choose_preset">Choose preset</string>
    <string name="app_exclude_system_apps">Exclude system apps</string>
    <string name="app_exclude_system_apps_summary">Turn off this option only when really necessary. It is likely to cause crash with it disabled</string>
    <string name="app_template_using">Using %d templates</string>
    <string name="app_preset_using">Using %d presets</string>
    <string name="app_settings_preset_using">Using %d settings presets</string>
    <string name="app_extra_apps_visible_count">%d additional apps visible</string>
    <string name="app_extra_apps_invisible_count">%d additional apps invisible</string>
    <string name="app_warning_risky_package_title">Risky package</string>
    <string name="app_warning_risky_package_desc">This package is marked as risky and you can cause issues on hidden apps. Do you want to continue?</string>
    <string name="app_spoof">Spoofing</string>
    <string name="app_hide_installation_source">Spoof installation sources</string>
    <string name="app_hide_installation_source_desc">All of user apps will be spoofed as installed over Play Store for this application</string>
    <string name="app_hide_installation_source_system">Spoof system apps too</string>
    <string name="app_hide_installation_source_system_desc">All of system apps will be spoofed as installed over nothing for this application</string>
    <string name="app_exclude_target_installation_source">Exclude the target app</string>
    <string name="app_exclude_target_installation_source_desc">You can enable it if this app is not available at Play Store</string>
    <string name="app_force_stop_warning">Don\'t forget to force stop the target app after saving the configuration</string>
    <string name="app_invert_activity_launch_protection">Invert Activity launch protection</string>
    <string name="app_invert_activity_launch_protection_desc">This option will invert \"Disable Activity launch protection\" selection in Settings.</string>
    <string name="app_global_activity_launch_protection_state">Protection is %s globally</string>
    <string name="title_preset_manage">Show presets</string>
    <string name="preset_xposed">LSPosed/Xposed modules</string>
    <string name="preset_root_apps">Root managers/Rooted apps</string>
    <string name="preset_custom_rom">Custom ROM apps</string>
    <string name="preset_sus_apps">Suspicious apps</string>
    <string name="preset_detector_apps">Detector/Checker apps</string>
    <string name="settings_preset_accessibility">Accessibility</string>
    <string name="settings_preset_dev_options">Developer options</string>
    <string name="logs_save">Save logs</string>
    <string name="logs_clear">Clear logs</string>
    <string name="logs_empty">No logs to save</string>
    <string name="logs_saved">Logs saved</string>
    <string name="settings_module">Module</string>
    <string name="settings_overwrite">Overwrite</string>
    <string name="settings_overwritten">Overwritten</string>
    <string name="settings_overwrite_summary">This category items will be forced as enabled if the switches are checked</string>
    <string name="settings_default_value">Default value: %s</string>
    <string name="settings_data_isolation">Data isolation</string>
    <string name="settings_data_isolation_summary">App data: %s\nVold app data: %s\nForce mount: %s</string>
    <string name="settings_data_isolation_unsupported">This option is only available on Android 11 and above</string>
    <string name="settings_app_data_isolation">App data isolation</string>
    <string name="settings_vold_app_data_isolation">Vold app data isolation</string>
    <string name="settings_warning">Warning</string>
    <string name="settings_vold_warning">This will enable an AOSP feature which make app\'s external private storage directory isolated. This can help improve hiding apps while may cause stability issues. This feature may stop working at any time since it is abandoned in AOSP.</string>
    <string name="settings_change_require_root">Changing requires root permission</string>
    <string name="settings_need_reboot">Changing requires reboot</string>
    <string name="settings_permission_denied">Permission denied</string>
    <string name="settings_force_mount_data">Enforce data isolation for all apps</string>
    <string name="settings_force_mount_data_summary">Data isolation is disabled for apps target API lower than 30 by default</string>
    <string name="settings_detail_log">Detail log for debugging</string>
    <string name="settings_max_log_size">Logger buffer sizes</string>
    <string name="settings_hide_icon">Hide module icon in launcher</string>
    <string name="settings_hide_icon_summary">You can still open the app in Xposed manager</string>
    <string name="settings_bypass_risky_package_warning">Bypass risky package warning</string>
    <string name="settings_bypass_risky_package_warning_summary">Note that the devs are not responsible for risky package related issues before or after you enabled this feature</string>
    <string name="settings_disable_activity_launch_protection">Disable Activity launch protection</string>
    <string name="settings_disable_activity_launch_protection_summary">This toggle will lift all startActivity protections. If you\'re unsure, don\'t enable it.</string>
    <string name="settings_language">Language</string>
    <string name="settings_translate">Participate in translation</string>
    <string name="settings_translate_summary">Help us translate %s into your language</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_system_theme_color">System theme color</string>
    <string name="settings_theme_color">Theme color</string>
    <string name="settings_dark_theme">Dark theme</string>
    <string name="settings_pure_black_dark_theme">Pure black dark theme</string>
    <string name="settings_pure_black_dark_theme_summary">Use the pure black theme if dark theme is enabled</string>
    <string name="settings_service">Service</string>
    <string name="settings_stop_system_service">Stop system service</string>
    <string name="settings_stop_system_service_summary">Need reboot to restart service</string>
    <string name="settings_is_clean_env">Clean runtime environment at the same time?</string>
    <string name="settings_force_clean_env">Force clean runtime environment (root)</string>
    <string name="settings_force_clean_env_summary">Only if system service fails to start, otherwise you should click the above option.</string>
    <string name="dark_theme">Dark theme</string>
</resources>